# rust_json_mongo

./: Cargo.toml  README.md
domain/: Cargo.toml
domain/src/: lib.rs  mongo.rs  user.rs
src/: main.rs
tools/docker/: docker-compose.yml
tools/docker/mongo/: Dockerfile  init-mongo.js
