[package]
name = "domain"
version = "0.1.0"
authors = ["Hoareau John <hxjwork1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.125"

[dependencies.mongodb]
version = "1.2.0"
default-features = false
features = ["sync"]
